# fastapi-utils

./: .deepsource.toml  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  codecov.yml  mkdocs.yml  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  publish-docs.yml  publish.yml  pull-request.yml
FastApi_RESTful/: __init__.py  api_model.py  cbv.py  enums.py  timing.py
docs/: CNAME  contributing.md  help-fastapi-restful.md  help-fastapi-utils.md  index.md  release-notes.md
docs/src/: api_model.py  api_settings.py  camelcase1.py  camelcase2.py  class_based_views1.py  class_based_views2.py  class_resource_view1.py  class_resource_view2.py  class_resource_view3.py  class_resource_view4.py  enums1.py  enums2.py  guid1.py  guid2.py  inferring_router1.py  inferring_router2.py  openapi1.py  openapi2.py  repeated_tasks1.py  session1.py  timing1.py  timing2.py
docs/user-guide/: class-based-views.md  class-resource.md  inferring-router.md  openapi.md  repeated-tasks.md  session.md  sessions.md  timing-middleware.md
docs/user-guide/basics/: api-model.md  api-settings.md  camelcase.md  enums.md  guid-type.md
fastapi_restful/: __init__.py  api_model.py  api_settings.py  camelcase.py  cbv.py  cbv_base.py  enums.py  guid_type.py  inferring_router.py  session.py  tasks.py  timing.py
fastapi_utils/: __init__.py  api_model.py  api_settings.py  base_route.py  camelcase.py  cbv.py  cbv_base.py  crud_base.py  enums.py  guid_type.py  inferring_router.py  injected.py  openapi.py  session.py  tasks.py  timing.py
fastapi_utils/crud/: __init__.py  base.py  route.py
scripts/: develop.sh  lock.sh  netlify-docs.sh
tests/: conftest.py  test_api_model.py  test_api_settings.py  test_camelcase.py  test_cbv.py  test_cbv_base.py  test_enums.py  test_generic_cbv.py  test_guid_type.py  test_inferring_router.py  test_injected.py  test_openapi.py  test_session.py  test_tasks.py  test_timing.py
