[tool.poetry]
name = "fastapi-utils"
version = "0.3.0"
description = "Reusable utilities for FastAPI"
license = "MIT"
authors = ["David Montague <davwmont@gmail.com>"]
readme = "README.md"
homepage = "https://fastapi-utils.davidmontague.xyz"
repository = "https://github.com/dmontagu/fastapi-utils"
documentation = "https://fastapi-utils.davidmontague.xyz"
keywords = ["fastapi", "utilities", "utils"]
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Utilities"
]

[tool.poetry.dependencies]
python = "^3.7"

fastapi = "*"
pydantic = "^1.10,<2.0"
sqlalchemy = "^1.4,<2.0"

[tool.poetry.dev-dependencies]
# Starlette features
aiofiles = "*"  # Serving static files
requests = "*"  # TestClient

# Testing
pytest = "*"
pytest-cov = "*"
pytest-asyncio = "*"
coverage = "*"
httpx = "*"
# CI
codecov = "*"

# Static
ruff = "*"
black = { version = "*", allow-prereleases = true }
mypy = "*"
sqlalchemy-stubs = "*"

# Documentation
mkdocs = "*"
mkdocs-material = "*"
markdown-include = "*"

[tool.black]
line-length = 120
target_version = ['py37']
include = '\.pyi?$'
exclude = '''
(
  /(
    \.git
    | \.mypy_cache
    | \.pytest_cache
    | htmlcov
    | build
  )/
)
'''

[tool.ruff]
line-length = 120
extend-select = ['RUF100', 'C90', 'I']
isort = { known-first-party = ['fastapi-utils', 'tests'] }

#flake8-quotes = {inline-quotes = 'single', multiline-quotes = 'double'}
#mccabe = { max-complexity = 14 }

#[tool.ruff.per-file-ignores]
#'pydantic/__init__.py' = ['F405', 'F403']
#'tests/test_forward_ref.py' = ['F821']


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
