[tool.poetry]
name = "FastApi-RESTful"
version = "0.4.3"
description = "Quicker FastApi developing tools"
license = "MIT"
authors = ["Yuval Levi <yuvall9313@gmail.com>"]
readme = "README.md"
homepage = "https://fastapi-restful.netlify.app"
repository = "https://github.com/yuval9313/fastapi-utils"
documentation = "https://fastapi-restful.netlify.app"
keywords = ["fastapi", "OOP", "RESTful"]
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: AsyncIO",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Utilities"
]

[tool.poetry.dependencies]
python = "^3.7"

dataclasses = {version = "^0.8", python = "~3.6.2"}
fastapi = "^0.89"
pydantic = "^1.0,<2.0"
sqlalchemy =  { version = "^1.0,<2.0", optional = true }
psutil = "^5"

[tool.poetry.dev-dependencies]
# Starlette features
aiofiles = "*"  # Serving static files
httpx = "*"  # TestClient

# Testing
pytest = "^7.0"
pytest-cov = "*"
pytest-asyncio = "*"
coverage = "*"


# Static
ruff = "*"
black = { version = "*", allow-prereleases = true }
mypy = "*"
sqlalchemy-stubs = "*"

# Documentation
mkdocs = "*"
mkdocs-material = "*"
markdown-include = "*"

[tool.poetry.extras]
all = ["sqlalchemy"]
session = ["sqlalchemy"]

[tool.black]
line-length = 120
target_version = ['py39']
include = '\.pyi?$'
exclude = '''
(
  /(
    \.git
    | \.mypy_cache
    | \.pytest_cache
    | htmlcov
    | build
  )/
)
'''

[tool.ruff]
line-length = 120
extend-select = ['RUF100', 'C90', 'I']
isort = { known-first-party = ['FastApi-RESTful', 'tests'] }


[tool.coverage.run]
source = ["fastapi_restful"]
branch = true

[tool.coverage.report]
precision = 2
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "raise NotImplemented",
    "@overload",
    "if TYPE_CHECKING:",
    'if __name__ == "__main__":'
]

[tool.poetry-version-plugin]
source = "init"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.masonry.api"
